--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "edited_web_project",
+  "name": "portfolio_project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@tanstack/react-query": "^5.76.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.11.0",
+    "lucide-react": "^0.510.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.3",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
+    "web-vitals": "^2.1.4",
+    "zod": "^3.24.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.1"
   }
 }
